bug fixed with z-index

--- a/responsiveWebDesign/personalPortfolio/index.css
+++ b/responsiveWebDesign/personalPortfolio/index.css
@@ -16,9 +16,10 @@ a {
 text-decoration: none;
 }
 
-nav ul {
-text-align: right;
+nav {
+z-index: 1;
 position: fixed;
+text-align: right;
 width: 100%;
 background-color: #e0ebe8;
 }
@@ -89,6 +90,7 @@ padding-top: 60px;
 }
 
 .project-tile {
+position: relative;
 padding: 5px;
 margin: 60px 60px;
 border: 2px solid lightblue;
@@ -101,6 +103,7 @@ transition: transform 1s;
 }
 
 .project-tile:hover {
+-webkit-transform: scale(1.08);
 transform: scale(1.08);
 transition: all 0.6s;
 }
@@ -223,11 +226,11 @@ background: #F08080;
 }
 
 @media only screen and (max-width: 720px) {
-nav ul {
+nav {
   text-align: center;
 }
 #navbar li {
-margin: 12px 20px;
+margin: 12px 10px;
 }
 .project-tile {
   width: 70%;
